refactor: replace deprecated url constructor